<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".onboarding.OnboardingActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                style="@style/OnboardingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:text="@string/privacy_policy_title"
                android:visibility="visible"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/privacy_desc1"
                style="@style/OnboardingDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:text="@string/privacy_policy_text1"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/privacy_desc2"
                style="@style/OnboardingDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:text="@string/privacy_policy_text2"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/privacy_desc3"
                style="@style/OnboardingDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:text="@string/privacy_policy_text3"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/privacy_desc4"
                style="@style/OnboardingDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:text="@string/privacy_policy_text4"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/privacy_desc5"
                style="@style/OnboardingDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:text="@string/privacy_policy_text5"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/privacy_desc6"
                style="@style/OnboardingDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:text="@string/privacy_policy_text6"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacy_desc7"
            style="@style/OnboardingDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:text="@string/privacy_policy_text7"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacy_desc8"
            style="@style/OnboardingDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:text="@string/privacy_policy_text8"
            android:visibility="visible" />

            <Button
                android:id="@+id/privacy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_outlined_button"
                android:layout_marginTop="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/final_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/view_privacy"
                />

            <Button
                android:id="@+id/faq_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_outlined_button"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/final_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/view_faq"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="46dp"
                android:layout_marginBottom="128dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/OnboardingDesc"
                    android:layout_margin="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/agreement"
                    android:layout_weight="1"
                    android:visibility="visible" />

                <Switch
                    android:id="@+id/checkbox_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:checked="false"
                    android:theme="@style/SwitchThemePrivacy" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="8dp"
        android:background="@color/white">

        <include layout="@layout/button_and_progress" />
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
