<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".onboarding.OnboardingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/on_boarding_banner"
                style="@style/OnboardingImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_bluetooth_illustration"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                style="@style/OnboardingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_howitworks_title"
                android:visibility="visible"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_desc"
                style="@style/OnboardingDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:gravity="center"
                android:text="@string/tv_howitworks_explanation"
                android:visibility="visible"
                android:layout_marginBottom="128dp"/>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/footer"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="8dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/btn_onboardingStart"
            style="@style/CustomButton">
            <TextView
                style="@style/CustomButtonText"
                android:text="@string/great_button" />
            <ImageView
                style="@style/CustomButtonIcon"
                android:src="@drawable/ic_arrow_forward_white" />
        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
